# my-rust-journey

collections/src/: main.rs
control_flow/src/: main.rs
data_types/src/: main.rs
enums/src/: main.rs
exercises/guessing_game/: Cargo.toml
exercises/guessing_game/src/: main.rs
exercises/problem_1/: Cargo.toml
exercises/problem_2/: Cargo.toml
exercises/problem_2/src/: main.rs
functions/src/: main.rs
pattern_matching/src/: main.rs
variables/src/: main.rs
